2002-04-24  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 548362 ]: inspector deletes wrong package on exit
	* inspect.lisp (inspect): keep the temp inspect package in a
	lexical variable in addition to *PACKAGE*

2002-04-24  Sam Steingold  <sds@gnu.org>

	* spvw.d (init_object_tab) [UNIX_CYGWIN32]: add :CYGWIN to *FEATURES*

2002-04-24  Sam Steingold  <sds@gnu.org>

	upgraded to readline-4.2a
	* stream.d (lisp_completion_matches, lisp_completion_more):
	fixed the signature for the new readline
	(rd_ch_terminal3): wrap multi-line history handling inside
	begin_system_call()/end_system_call()
	(init_streamvars): do not use readline internals
	* noreadline.d: upgraded to the readline-4.2a API

2002-04-24  Hoehle, Joerg-Cyril  <Joerg-Cyril.Hoehle@t-systems.com>
	    Sam Steingold  <sds@gnu.org>

	patch [ 548089 ]: FOREIGN-FUNCTION+VARIABLE for everybody
	this allows CLISP FFI self-test (and dozens of hacks)
	* foreign.d (ffi_identity): new function
	(ffi_user_pointer): new variable
	(init_ffi): register them
	* foreign.lisp (ffi_identity, ffi_user_pointer) [commented]: define

2002-04-23  Hoehle, Joerg-Cyril  <Joerg-Cyril.Hoehle@t-systems.com>
	    Sam Steingold  <sds@gnu.org>

	patch [ 547541 ]: WITH-FOREIGN-OBJECT FFI stack allocation
	* foreign.d (EXEC-ON-STACK): new function
	* constsym.d, subr.d: ditto
	* foreign1.lisp (with-foreign-object): new public macro

2002-04-23  Hoehle, Joerg-Cyril  <Joerg-Cyril.Hoehle@t-systems.com>
	    Sam Steingold  <sds@gnu.org>

	patch [ 547491 ]: C-VAR-ADDRESS and OFFSET foreign-places
	* foreign1.lisp (offset, c-var-address): new public macros
	* foreign.d (%OFFSET): comment that it is used now

2002-04-22  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): new option: `-interactive-debug', which
	overrides batch-mode for -c, -x and exec-file
	* constsym.d (APPEASE-CERRORS): define here for the above

2002-04-22  Hoehle, Joerg-Cyril  <Joerg-Cyril.Hoehle@t-systems.com>
	    Sam Steingold  <sds@gnu.org>
